tests/derive_ui/subcommand_and_flatten.stderr
error: `flatten` cannot be used with `subcommand`
  --> tests/derive_ui/subcommand_and_flatten.rs:16:27
   |
16 |     #[command(subcommand, flatten)]
   |                           ^^^^^^^
